[package]
author_email='contact@antmicro.com'
name = "wasibox"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
wasi_ext_lib = { git = "https://github.com/antmicro/wasi_ext_lib.git", branch = "main" }
unzip = { version = "0.1.0", package = "unzip", path = "src/tools/unzip" }
hexdump = { version = "0.1.0", package = "hexdump", path = "src/tools/hexdump" }
imgcat = { version = "0.1.0", package = "imgcat", path = "src/tools/imgcat" }
purge = { version = "0.1.0", package = "purge", path = "src/tools/purge" }
tree = { version = "0.1.0", package = "tree", path = "src/tools/tree" }
tar_wasi = { version = "0.1.0", package = "tar_wasi", path = "src/tools/tar_wasi" }
