[package]
name = "wasibox"
version = "0.1.4"
edition = "2021"

[workspace.package]
authors = ["Antmicro <www.antmicro.com>"]

[workspace.dependencies]
wasi = "0.11.0"
wasi_ext_lib = { git = "https://github.com/antmicro/wasi_ext_lib.git", branch = "main" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

[dependencies]
lazy_static = "1.4.0"
unzip = { version = "0.1.0", package = "unzip", path = "src/tools/unzip" }
hexdump = { version = "0.1.0", package = "hexdump", path = "src/tools/hexdump" }
imgcat = { version = "0.1.0", package = "imgcat", path = "src/tools/imgcat" }
purge = { version = "0.1.0", package = "purge", path = "src/tools/purge" }
tree = { version = "0.1.0", package = "tree", path = "src/tools/tree" }
tar_wasi = { version = "0.1.0", package = "tar_wasi", path = "src/tools/tar_wasi" }
kill = { version = "0.1.0", package = "kill", path = "src/tools/kill" }
stty = { version = "0.1.0", package = "stty", path = "src/tools/stty" }
mount = { version = "0.1.0", package = "mount", path = "src/tools/mount" }
umount = { version = "0.1.0", package = "umount", path = "src/tools/umount" }
wget = { version = "0.1.0", package = "wget", path = "src/tools/wget" }
mknod = { version = "0.1.0", package = "mknod", path = "src/tools/mknod" }
init = { version = "0.1.0", package = "init", path = "src/tools/init" }
websocat = { version = "0.1.0", package = "websocat", path = "src/tools/websocat" }
wasi_ext_lib = { workspace = true }
