[package]
author = "Antmicro <www.antmicro.com>"
name = "stty"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/stty.rs"

[dependencies]
clap = "3.2.22"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi_ext_lib = { git = "https://github.com/antmicro/wasi_ext_lib.git", branch = "47550-mount-syscall", features = ["hterm"] }
