[package]
name = "tar_wasi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/tar_wasi.rs"

[dependencies]
tar = { git = "https://github.com/antmicro/tar-rs", rev = "1a0631d485891f3b382f0be93cfafb81f523286f" }
clap = { workspace = true }
flate2 = "1.0.17"
bzip2 = "0.4"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi_ext_lib = { workspace = true }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
atty = "0.2"
